--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "gh-pages": "^6.3.0",
     "vite": "^6.0.5"
+  },
+  "dependencies": {
+    "body-scroll-lock": "^4.0.0-beta.0"
   }
 }
