--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
-    "body-scroll-lock": "^4.0.0-beta.0"
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "swiper": "^11.2.2"
   }
 }
